# navigation_graph_map

./: .gitignore  Dockerfile  README.md  dependencies.rosinstall  entrypoint.sh  install_typedb.sh
.github/workflows/: container.yml
navigation_kb/: package.xml  setup.cfg  setup.py
navigation_kb/config/: data.tql  query_examples.tql  schema.tql
navigation_kb/launch/: navigation_kb.launch.py
navigation_rosa/: package.xml  setup.cfg  setup.py
navigation_rosa/config/: navigation_rosa.tql
navigation_rosa/launch/: navigation_rosa.launch.py
navigation_simulation/: package.xml  setup.cfg  setup.py
navigation_simulation/config/: navigation_params.yaml
navigation_simulation/launch/: mirte_simulation.launch.py  simulation.launch.py
navigation_simulation/worlds/: empty.world
navigation_task_plan/: CMakeLists.txt  package.xml
navigation_task_plan/config/: waypoints.yaml
navigation_task_plan/include/: navigate.hpp
navigation_task_plan/include/navigation_task_plan/: action_move.hpp
navigation_task_plan/launch/: navigate_task_plan.launch.py
navigation_task_plan/pddl/: domain.pddl  domain_place.pddl  problem.pddl  problem_place.pddl  problem_place_solved.pddl
navigation_task_plan/src/: navigate.cpp
navigation_task_plan/src/navigation_task_plan/: action_move.cpp
