<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_task_plan</name>
  <version>0.0.0</version>
  <description>Planning formulation for navigating in a graph-like environment</description>
  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>plansys2_executor</build_depend>
  <build_depend>plansys2_planner</build_depend>
  <build_depend>plansys2_domain_expert</build_depend>
  <build_depend>plansys2_problem_expert</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosa_task_plan_plansys</build_depend>
  <build_depend>ros_typedb_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
